--- a/MyApplicationSienke/app/src/main/res/layout/activity_business_checking_in_info.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_business_checking_in_info.xml
@@ -85,6 +85,7 @@
                     android:textSize="16sp" />
 
                 <TextView
+                    android:id="@+id/dizhi"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
