--- a/MyApplicationSienke/app/src/main/res/layout/activity_business_checking_in_info.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_business_checking_in_info.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray_thin"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/root_linearlayout">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -208,6 +209,20 @@
                     android:stretchMode="columnWidth"
                     android:verticalSpacing="5dp" />
             </LinearLayout>
+            <Button
+                android:id="@+id/save_btn"
+                android:layout_width="match_parent"
+                android:layout_height="36dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="15dp"
+                android:layout_marginLeft="11dp"
+                android:layout_marginRight="11dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/user_detail_save_btn_selector"
+                android:text="保 存"
+                android:textColor="@android:color/white"
+                android:textSize="18sp" />
         </LinearLayout>
     </ScrollView>
+
 </LinearLayout>
