--- a/MyApplicationSienke/app/src/main/res/layout/activity_meter_data_download.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_meter_data_download.xml
@@ -71,15 +71,26 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:scrollbars="none"
-            android:transcriptMode="disabled"/>
+            android:listSelector="#00000000"
+            android:scrollbarThumbVertical="@color/text_blue"
+            android:scrollbarStyle="insideInset"
+            android:scrollbarSize="2dp"
+            android:background="@drawable/normal_button_bg_selector"
+            android:transcriptMode="disabled"
+            android:layout_marginRight="5dp"
+            android:layout_marginLeft="5dp"/>
 
         <ListView
             android:id="@+id/meter_area_lv"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:scrollbars="none"
+            android:listSelector="#00000000"
+            android:scrollbarThumbVertical="@color/text_blue"
+            android:scrollbarStyle="insideInset"
+            android:scrollbarSize="2dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginEnd="5dp"
             android:transcriptMode="disabled"/>
     </LinearLayout>
 
