--- a/MyApplicationSienke/app/src/main/res/layout/activity_work_report.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/activity_work_report.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray_thin"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:id="@+id/rootLinearlayout">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -198,23 +199,22 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="3dp"
-                android:background="@color/text_font_color_white"
-                android:orientation="horizontal">
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/check_hidden_danger_down_shape"
+                android:gravity="center_horizontal"
+                android:orientation="vertical"
+                android:padding="10dp">
 
-                <TextView
+                <com.example.administrator.thinker_soft.mode.MyGridview
+                    android:id="@+id/gridview"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:padding="10dp"
-                    android:text="附件："
-                    android:textColor="@color/text_black"
-                    android:textSize="16sp" />
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:padding="10dp"
-                    android:src="@mipmap/tj" />
+                    android:gravity="center"
+                    android:numColumns="5"
+                    android:stretchMode="columnWidth"
+                    android:verticalSpacing="5dp" />
             </LinearLayout>
 
             <RelativeLayout
