--- a/MyApplicationSienke/app/src/main/res/layout/popupwindow_business_fbgg.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/popupwindow_business_fbgg.xml
@@ -1,17 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background="@color/gray_little_thin"
     android:orientation="vertical">
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@mipmap/pop_banner"
             android:orientation="vertical">
 
 
@@ -21,6 +17,7 @@
                 android:layout_height="0dp"
                 android:layout_weight="1"
                 android:gravity="center"
+                android:background="@drawable/security_popupwindow"
                 android:text="会议纪要"
                 android:textColor="@color/text_black"
                 android:textSize="16sp" />
@@ -36,10 +33,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_weight="1"
+                android:background="@drawable/security_popupwindow"
                 android:gravity="center"
                 android:text="通知公告"
                 android:textColor="@color/text_black"
                 android:textSize="16sp" />
         </LinearLayout>
-    </ScrollView>
 </LinearLayout>
