--- a/MyApplicationSienke/app/src/main/res/layout/printdata_layout.xml
+++ b/MyApplicationSienke/app/src/main/res/layout/printdata_layout.xml
@@ -12,10 +12,12 @@
             android:id="@+id/print_data"
             android:layout_width="match_parent"
             android:layout_height="200dp"
+            android:background="@drawable/bluetooth_text"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="46dp">
+            android:layout_marginTop="46dp"
+            android:gravity="start|top">
 
         </EditText>
 
@@ -50,9 +52,9 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_below="@+id/print_data"
-            android:layout_marginTop="21dp"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
+            android:layout_marginTop="21dp"
             android:background="@drawable/community_selector"
             android:text="打印" />
 
@@ -62,10 +64,10 @@
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
-            android:layout_marginTop="10dp"
             android:layout_below="@+id/send"
             android:layout_marginLeft="10dp"
             android:layout_marginRight="10dp"
+            android:layout_marginTop="10dp"
             android:background="@drawable/community_selector"
             android:text="指令" />
 
